service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: cntproject
  name: cntproject
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: cntproject
  type: LoadBalancer
